2002-01-27  Richard Hestilow <hestilow@ximian.com>

	* Makefile.am (CLEANFILES): Rename as MAINTAINERCLEANFILES.
	
Tue Jan 22 16:20:21 2002  Jonathan Blandford  <jrb@redhat.com>

	* configure.in: Keep ACLOCAL_FLAGS around, and actually use the
	gnome-vfs cflags/libs.

2002-01-21  Richard Hestilow <hestilow@ximian.com>

	* Remerge control-center-plus.

2002-01-21  Hasbullah Bin Pit <sebol@ikhlas.com>

	* configure.ini: Added Malay (ms)to ALL_LINGUAS.
	* po/ms.po: Added Malay Translation.

2002-01-21  Anders Carlsson  <andersca@gnu.org>

	* schemas/peripherals.schemas: motion_threshold is supposed
	to be an int.

2002-01-17  Jakub Steiner <jimmac@ximian.com>

	* control-center.png: fixed the anti-aliasing of the wrench

2002-01-16  Kevin Breit  <mrproper@ximian.com>

	* help/C/gnome-control-center.sgml: Removed this file
	
	* help/C/control-center.sgml: Added this file

2002-01-15  Richard Hestilow <hestilow@ximian.com>

	* (Many "make distcheck" fixes).

2002-01-14  Bradford Hovinen  <hovinen@ximian.com>

	* Makefile.am (CLEANFILES): Add this line

	* capplets/Makefile.am (always_built_SUBDIRS): Compile common first

	* configure.in (INSTALL_GCONF_CONFIG_SOURCE): Use control-center-2
	for data directory

Tue Jan  8 15:00:27 2002  Jonathan Blandford  <jrb@redhat.com>

	* configure.in (XF86MISC_LIBS): we now depend on esound.

2002-01-07  Richard Hestilow  <hestilow@ximian.com>

	* configure.in: Whoops, delete those invalid-dnl'ed lines. This
	is part of my use-xscreensaver-demo patch.

2002-01-04  Richard Hestilow  <hestilow@ximian.com>

	* configure.in: Add libgnomeui dependency to daemon
	(it needs gnome-client).

2002-01-04  Mikael Hallendal  <micke@codefactory.se>

	* configure.in: added
	capplets/default-applications/default-applications.desktop.in to
	AC_OUTPUT.

2002-01-03  Bradford Hovinen  <hovinen@ximian.com>

	* configure.in (AC_OUTPUT): Remove schemas/Makefile

	* Makefile.am (SUBDIRS): Remove schemas

2001-12-20  Bradford Hovinen  <hovinen@ximian.com>
