@@ -1,6 +1,6 @@
 #!/bin/sh
 
-if test "x$#" == "x0"
+if test "x$#" = "x0"
 then
     @BINDIR@/gnomecc --run-capplet @CAPPLET_NAME@
 else
