@@ -1,3 +1,12 @@
+2002-01-28  Laszlo Peter  <laca@ireland.sun.com>
+
+	* archiver/location.c: s/__FUNCTION__/G_GNUC_FUNCTION/
+	* capplets/common/capplet-util.c: ditto
+	* capplets/common/capplet-util.h: ditto
+	* libbackground/preferences.c: ditto
+	* applets/common/wrapper-script.in: change "test $x == y" to
+	  "test $x = y" for portability
+
 2002-01-27  Richard Hestilow <hestilow@ximian.com>
 
 	* Makefile.am (CLEANFILES): Rename as MAINTAINERCLEANFILES.
